# cover_letter_generator

./: .env.template  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml
cover_letter_generator/apps/common/: apps.py  managers.py  models.py
cover_letter_generator/apps/common/management/: templates.py
cover_letter_generator/apps/common/management/commands/: startapp.py
cover_letter_generator/apps/cover_letters/: admin.py  apps.py  exceptions.py  forms.py  models.py  services.py  templates.py  urls.py  views.py
cover_letter_generator/apps/cover_letters/migrations/: 0001_add_vector_extension.py  0002_initial.py
cover_letter_generator/apps/dashboard/: apps.py  urls.py  views.py
cover_letter_generator/apps/resumes/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
cover_letter_generator/apps/resumes/migrations/: 0001_initial.py
cover_letter_generator/config/: asgi.py  urls.py  wsgi.py
cover_letter_generator/config/app_template/: apps.py-tpl
cover_letter_generator/config/settings/: base.py  dev.py
static/css/: tailwind.css
templates/: _base.html  home.html
templates/account/: login.html
templates/cover_letters/: detail.html  generate.html  job_detail.html  job_list.html
templates/cover_letters/partials/: cover_letter_content.html  favorite_button.html
templates/dashboard/: index.html
templates/layouts/: _header.html
templates/resumes/partials/: upload_modal.html
